tests/NormalTests/paczka1/small_fuzzy/57529911.err
Error in line 4: p6eq5wA S477 66,5
Error in line 6: p6eq5wA A516 59,7
